GS-9965 GS-9852 IE8: Opting to Sign Out is affecting the Header link spacing fixed and length of white separating pipe for 14.9.

--- a/src/webapp/res/css/gs2010_IEstyles.css
+++ b/src/webapp/res/css/gs2010_IEstyles.css
@@ -16,6 +16,7 @@ General comments:
 =B- ie8
 =C- ie7
 =D- ie6
+=3a utility links
 =4- page layouts
 =4a- home page carousel
 =4a-1 find-compare
@@ -525,6 +526,39 @@ body.ie6 .rtDoor25 {
 
 body.ie6 .lftDoor25 {
     margin: 0;
+}
+
+/* =3a utility links
+-------------------------------------------------------------------------------------------*/
+
+body.ie8 #utilLinks li, body.ie8 #utilLinks li.nav_menu {
+    display: inline-block;
+}
+
+body.ie8 #utilLinks .nav_menu a.nav_group_heading {
+    padding: 0 17px 0 6px;
+}
+
+body.ie8 #utilLinks li.over .nav_group_items {
+    left: -25px; top:13px;
+}
+
+body.ie7 #utilLinks .nav_menu a.nav_group_heading {
+    padding: 0 17px 0 6px;
+    margin: 3px 0 6px 0;
+}
+
+body.ie7 #utilLinks li.over .nav_group_items {
+    left: -25px; top:17px;
+}
+
+body.ie6 #utilLinks .nav_menu a.nav_group_heading {
+    padding: 0 17px 0 6px;
+    margin: 3px 0 6px 0;
+}
+
+body.ie6 #utilLinks li.over .nav_group_items {
+    left: -25px; top:17px;
 }
 
 /* =4- page layouts
